--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
     <h2>TA Hours (Zoom)</h2>
     <p>Join my TA hours via Zoom: <a href="https://stonybrook.zoom.us/j/97430099066?pwd=UxtSEHU9qaM5O8PznYZvijf78j4tr6.1">Zoom Link</a></p>
 
-    <img src="your-photo-link.jpg" alt="Tanoy Debnath" style="width:200px;height:auto;">
+    <img src="1.9X1.9.jpg" alt="Tanoy Debnath" style="width:200px;height:auto;">
 </body>
 </html>
